# models/class.go
@@ -12,6 +12,7 @@ type Class struct {
 	BannerPictureURL string          `json:"banner_picture,omitempty"`
 	Teacher          Teacher         `gorm:"foreignKey:TeacherID;references:ID;constraint:OnDelete:CASCADE"`
 	Categories       []ClassCategory `gorm:"many2many:class_class_categories;constraint:OnDelete:CASCADE"`
+	Sessions         []ClassSession  `json:"sessions" gorm:"foreignKey:ClassID;constraint:OnDelete:CASCADE"`
 }
 
 // ---- DOC-ONLY STRUCT FOR SWAGGER BELOW ----
@@ -21,6 +22,12 @@ type ClassDoc struct {
 	ClassName        string `json:"class_name" example:"Advanced Python Programming"`
 	ClassDescription string `json:"class_description" example:"Advanced Python programming course"`
 	BannerPicture    string `json:"banner_picture,omitempty" example:"<base64-encoded-image>"`
+}
+
+type RecommendClassesDoc struct {
+	RecommendedFound   bool       `json:"recommended_found" example:"true"`
+	RecommendedClasses []ClassDoc `json:"recommended_classes"`
+	RemainingClasses   []ClassDoc `json:"remaining_classes"`
 }
 
 type ClassAverageRating struct {
